@@ -64,4 +64,4 @@ A receive-only APRS-IS "i-gate" with following properties:
      longer.
 
 
-by Matti Aarnio - OH2MQK - oh2mqk-at-sral-fi - 2007
+by Matti Aarnio - OH2MQK - oh2mqk-at-sral-fi - 2007,2008
